2005-04-09  Jay Belanger  <belanger@truman.edu>

	* calc/calc-units.el (math-standard-units): Redefine Watt hour as
	W*hr.

2005-04-09  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/xterm.el (xterm-rgb-convert-to-16bit): Simplify.
	(xterm-register-default-colors): Update color values computation
	to match xterm-200.

2005-04-09  Kenichi Handa  <handa@m17n.org>

	* international/code-pages.el (iso-latin-7): Fix the map.

2005-04-08  Luc Teirlinck  <teirllm@auburn.edu>

	* emacs-lisp/lisp.el (defun-prompt-regexp)
	(parens-require-spaces, buffer-end, end-of-defun)
	(insert-parentheses): Doc fixes.

2005-04-08  Kim F. Storm  <storm@cua.dk>

	* comint.el (comint-highlight-prompt): Fix face spec.
	* hi-lock.el (hi-green): Likewise.

2005-04-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* cus-edit.el (custom-modified-face):
	* comint.el (comint-highlight-input): Fix previous changes.
	* term.el (term-handle-ansi-escape): Add a comment.

2005-04-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* whitespace.el (whitespace-highlight-the-space): Put the same overlay
	in the buffer and in whitespace-highlighted-space.
	(whitespace-unhighlight-the-space): Simplify.
	(whitespace-buffer): Simplify.

2005-04-08  Dan Nicolaescu  <dann@ics.uci.edu>

	* textmodes/table.el (table-cell-face): Add special case for
	displays supporting a high number of colors.
	* progmodes/vhdl-mode.el (vhdl-font-lock-prompt-face)
	(vhdl-font-lock-reserved-words-face)
	(vhdl-speedbar-architecture-face)
	(vhdl-speedbar-instantiation-face)
	(vhdl-speedbar-architecture-selected-face)
	(vhdl-speedbar-instantiation-selected-face): Likewise.
	* progmodes/sh-script.el (sh-heredoc-face): Likewise.
	* progmodes/idlw-help.el (idlwave-help-link-face): Likewise.
	* progmodes/ebrowse.el (ebrowse-tree-mark-face)
	(ebrowse-root-class-face, ebrowse-member-attribute-face)
	(ebrowse-progress-face): Likewise.
	* progmodes/compile.el (compilation-info-face): Likewise.
	* progmodes/cc-fonts.el (c-invalid-face): Likewise.